--- a/index.html
+++ b/index.html
@@ -121,18 +121,18 @@ learning, probabilistic models, information theory, attention, front-vision, Ret
 <p style="font-size:20px; color:green" class="bodytext">Journal Publications
 </p>
 
+
+
 </p>
 <p style="font-size:20px" class="bodytext">
 Pamplona, D.; Hilgen, G.; Hennig, M.; Cessac, B.; Sernagor, E.; Kornprobst P.;
 <a
-href = "https://hal.inria.fr/hal-03087009/document/"
+href = "https://journals.physiology.org/doi/full/10.1152/jn.00076.2021"
 title="Opens external link in new window" target="_blank"
 class="external-link-new-window" >
-Large visual neuron assemblies receptive fields estimation using a super-resolution approach, 
-</a> under review
+LReceptive field estimation in large visual neuron assemblies using a super-resolution approach, 
+</a> Journal of Neurophysiology
 </p>
-
-
 
 </p>
 <p style="font-size:20px" class="bodytext">
@@ -188,6 +188,13 @@ Naturally Constrained Online Expectation Maximization</a></i>,International Conf
 </p>
 <p style="font-size:20px" class="bodytext">&nbsp;</p>
 <p style="font-size:20px; color:green" class="bodytext">Conference Abstracts
+</p>
+
+
+<p style="font-size:20px" class="bodytext">Pamplona, D.; Manzanera A.; Uncertainty driven gaze selection, European Conference on Eye Movements (oral presentation), 2022 
+</p>
+
+<p style="font-size:20px" class="bodytext">Pamplona, D.; Manzanera A.; Naturally Constrained Online Expectation Maximization, Conférence sur l'Apprentissage automatique, 2021
 </p>
 
 <p style="font-size:20px" class="bodytext">Cessac, B.; Kornprobst, P.; Kraria, S.; Nasser, H.; Pamplona, D.; Portelli, G.; Vieville T.; ENAS: A new software for spike train analysis and simulation, Bernstein Conference 2016
