--- a/index.html
+++ b/index.html
@@ -122,6 +122,13 @@ learning, probabilistic models, information theory, attention, front-vision, Ret
 </p>
 
 
+</p>
+<p style="font-size:20px" class="bodytext">
+Pamplona, D.; Rothkopf, C. A.; All different all equal: ecology and the eye's
+optics explain P-ganglion cells' anisotropies, under preparation
+</p>
+
+
 
 </p>
 <p style="font-size:20px" class="bodytext">
@@ -131,13 +138,7 @@ href = "https://journals.physiology.org/doi/full/10.1152/jn.00076.2021"
 title="Opens external link in new window" target="_blank"
 class="external-link-new-window" >
 LReceptive field estimation in large visual neuron assemblies using a super-resolution approach, 
-</a> Journal of Neurophysiology
-</p>
-
-</p>
-<p style="font-size:20px" class="bodytext">
-Pamplona, D.; Rothkopf, C. A.; All different all equal: ecology and the eye's
-optics explain P-ganglion cells' anisotropies, under preparation
+</a> Journal of Neurophysiology, 2022
 </p>
 
 
@@ -150,7 +151,7 @@ href="https://www.frontiersin.org/articles/10.3389/fninf.2017.00049/full"
 title="Opens external link in new window" target="_blank"
 class="external-link-new-window" >
 PRANAS: A New Platform for Retinal Analysis and Simulation,
-</a>Frontiers NeuroInformatics,2017
+</a>Frontiers NeuroInformatics, 2017
 </p>
 
 
