--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@ title="Opens external link in new window" target="_blank"
 class="external-link-new-window" >
 LReceptive field estimation in large visual neuron assemblies using a super-resolution approach, 
 </a> Journal of Neurophysiology, 2022
+ <a href="https://github.com/DanielaPamplona/SWN" title="Opens external link in new window" target="_blank" class="external-link-new-window" > Code</a>
 </p>
 
 
