--- a/index.html
+++ b/index.html
@@ -137,9 +137,10 @@ Pamplona, D.; Hilgen, G.; Hennig, M.; Cessac, B.; Sernagor, E.; Kornprobst P.;
 href = "https://journals.physiology.org/doi/full/10.1152/jn.00076.2021"
 title="Opens external link in new window" target="_blank"
 class="external-link-new-window" >
-LReceptive field estimation in large visual neuron assemblies using a super-resolution approach, 
+Receptive field estimation in large visual neuron assemblies using a super-resolution approach, 
 </a> Journal of Neurophysiology, 2022
  <a href="https://github.com/DanielaPamplona/SWN" title="Opens external link in new window" target="_blank" class="external-link-new-window" > Code</a>
+ </a>
 </p>
 
 
