--- a/index.html
+++ b/index.html
@@ -156,6 +156,10 @@ body {
         style="width: 32px;
         alt="ORCID iD icon"/>
     </a>
+<p </p> 
+<a href="./dataWebsite/Pamplona_curriculum_vitae.pdf">
+<img src="./dataWebsite/cv_logo.png" style="width:32px;height:32px;">
+</a>
 </div>
 
 
