--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ body {
         alt="ORCID iD icon"/>
     </a>
 <p </p> 
-<a href="./dataWebsite/Pamplona_curriculum_vitae.pdf">
+<a href="https://goo.gl/maps/TFSTUj49rmqa8ymE7">
 <img src="./dataWebsite/cv_logo.png" style="width:32px;height:32px;">
 </a>
 </div>
