--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@ body {
         alt="ORCID iD icon"/>
     </a>
 <p </p> 
-<a href="https://goo.gl/maps/TFSTUj49rmqa8ymE7">
-<img src="./dataWebsite/cv_logo.png" style="width:32px;height:32px;">
+<a href="./dataWebsite/Pamplona_curriculum_vitae.pdf">
+<img src="./dataWebsite/CV_logo.png" style="width:32px;height:32px;">
 </a>
 </div>
 
