--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ body {
     </a>
 <p </p> 
 <a href="./dataWebsite/Pamplona_curriculum_vitae.pdf">
-<img src="./dataWebsite/CV_logo.png" style="width:32px;height:32px;">
+<img src="./dataWebsite/CV_logo_UK.png" style="width:32px;height:32px;">
 </a>
 </div>
 
