--- a/index.html
+++ b/index.html
@@ -160,6 +160,10 @@ body {
 <a href="./dataWebsite/Pamplona_curriculum_vitae.pdf">
 <img src="./dataWebsite/CV_logo_UK.png" style="width:32px;height:32px;">
 </a>
+<p </p> 
+<a href="./dataWebsite/Pamplona_curriculum_vitae_fr.pdf">
+<img src="./dataWebsite/CV_logo_FR.png" style="width:32px;height:32px;">
+</a>
 </div>
 
 
