--- a/index.html
+++ b/index.html
@@ -289,6 +289,10 @@ visual system</a>, Vision Research, 2013 <a href="./dataWebsite/SourceCodePamplo
 <p style="font-size:20px; color:green" class="bodytext">Abstracts
 </p>
 
+
+<p>Pamplona, D. ; Manzanera A. ; Should I stay or should I go? Addressing the curiosity/boredom dilemma of a domestic robot, international Workshop on Intrinsically Motivated Open-ended Learning, 2023,
+</p>
+	
 <p>Pamplona, D.; Manzanera A.; Uncertainty driven gaze selection, European Conference on Eye Movements (oral presentation), 2022 
 </p>
 
