--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ body {
 		<a href="#Articles">Articles </a>
 		<a href="#Abstracts">Abstracts</a>
         <a href="#Teaching">Teaching</a>
-        <a href="#Projects">Projects</a>
+       <! --  <a href="#Projects">Projects</a>--> 
 		<span class="line"></span>
 	</nav>
 </header>
@@ -218,7 +218,7 @@ curiosity. </p>
 
 <div id="Research Interests">
 <p style="font-size:20px; color:green">Research Interests</p>
-<p><i>Unsupervised Learning, incremental learning, probabilistic models, information theory, attention, front-vision, retina, ecology, vision, sensory coding, embodyment, perception, intelligent systems, decision making.</i></p>
+<p><i> Visual perception, early vision, biological modelling, unsupervised Learning, incremental learning, probabilistic models, information theory, attention, front-vision, retina, ecology, vision, sensory coding, embodyment, perception, intelligent systems, decision making.</i></p>
 <p>&nbsp;</p>
 </div>
 
@@ -340,6 +340,8 @@ Neuro-computational Models of Vision, Signal Processing, Methods Data and Algori
 </p>
 </div>
 
+<! -- 
+	
 <div id="Projects">
 <p style="font-size:20px; color:green" class="bodytext">Projects
 </p>
@@ -416,13 +418,13 @@ Below is a list of possible short-term projects. This list is not exhaustive, it
 </table>
 
 </div>
-
+--> 
 
 </div>
 <!--
 
 <footer>
-Last Update: 10/02/2021
+Last Update: 26/04/2024
 </footer>
 
 
