--- a/index.html
+++ b/index.html
@@ -185,10 +185,13 @@ body {
 
 <div id="About">
 <p style="font-size:20px; color:green">About</p>
-I am a cognitive scientist with a focus on vision in a broad sense. I cherish biological and artificial perspectives of embodied vision and coaction between these two research fields. I have been affiliated with neuroscience modeling along with robotics labs in Portugal, Germany, and France. Consequently, my work spans from spiking data analysis to visual context classification. My latest work is in collaboration with  <a href ="
-http://perso.ensta-paristech.fr/~manzaner/"  title="Opens external
+With 10 years of experience, I am a machine learning and vision scientist in a broad sense. 
+My work spans from neural data analysis to context classification in computer vision. 
+My latest research is in collaboration with <a href ="http://perso.ensta-paristech.fr/~manzaner/"  title="Opens external
 link in new window" target="_blank" class="external-link-new-window" >Antoine
-Manzanera</a>. We are working on lifelong learning of visual representations, particularly in the problems of incremental learning and curiosity. I am also a lecturer in computer vision, mathematics, informatics and cognitive science. I have taught in several french universities and BSc and MSc levels.
+Manzanera</a>, in lifelong learning of visual representations, particularly in the problems of incremental learning and curiosity. 
+I am also a lecturer in computer vision, mathematics,  informatics, and cognitive science. 
+I have taught at several French universities at BSc and MSc levels.
 </div>
 <!--
 <p> I have graduated from Instituto Superior Tecnico, Portugal in Applied Mathematics and Computation both Bachelor and Master levels.</p>
