--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ curiosity. </p>
 
 <div id="Research Interests">
 <p style="font-size:20px; color:green">Research Interests</p>
-<p><i> Visual perception, early vision, biological modelling, unsupervised Learning, incremental learning, probabilistic models, information theory, attention, front-vision, retina, ecology, vision, sensory coding, embodyment, perception, intelligent systems, decision making.</i></p>
+<p><i> Visual perception, unsupervised Learning, incremental learning, probabilistic models, information theory, data science.</i></p>
 <p>&nbsp;</p>
 </div>
 
